New modification of the design to section contact and ajout the code of file style media query

--- a/public/assets/style/@media.css
+++ b/public/assets/style/@media.css
@@ -1,6 +1,6 @@
 /***** media query ****/
 @media (min-width: 230px) and (max-width: 550px) {
-
+    /* Navigation */
     .logo {
         position: relative;
         text-decoration: none;
@@ -9,7 +9,6 @@
         line-height: 100px;
         text-transform: capitalize;
     }
-
     .nav_links {
         display: flex;
         flex-direction: column;
@@ -17,7 +16,6 @@
         position: absolute;
         bottom: 250px;
     }
-
     .nav_links li {
         margin: 0 40px;
     }
@@ -25,22 +23,95 @@
     .btn-appointement {
         display: none;
     }
-
     .nav_links li a {
         padding: 10px 0;
         border: 2px;
         font-weight: bold;
         color: #ffffff;
     }
+    .container .btn-toogle {
+        color: #18ab63;
+        font-size: 1.5rem;
+        visibility: visible;
+        line-height: 90px;
+    }
+    
+    /* my competences */
+    .mycompetences {
+        height: 75vh;
+        margin-bottom: 120px;
+    }
+    .container .card-comptences {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 0rem;
+    }
+    .mycompetences .container .barre::after {
+        content: '';
+        left: 10%;
+        top: calc(49% + 1.5rem);
+        height: 8px;
+        width: 70px;
+        position: absolute;
+        transform: translateX(-50%);
+        background-color: #18ab63;
+    }
+    /* my realisations */
+    .myrealisation .container .barre::after {
+        content: ' ';
+        left: 10%;
+        top: calc(55% + 1.5rem);
+        height: 8px;
+        width: 70px;
+        position: absolute;
+        transform: translateX(-50%);
+        background-color: #18ab63;
+    }
+    .card-content-realisations  {
+        padding: 20px 0;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 1rem;
+    }
+
+    /* my expertises */
+    .myexpertises .container .barre::after {
+        content: ' ';
+        left: 10%;
+        top: calc(48% + 1.5rem);
+        height: 8px;
+        width: 70px;
+        position: absolute;
+        transform: translateX(-50%);
+        background-color: #18ab63;
+    }
+    .myexpertises .container .card-expertises {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 2rem;
+        padding: 15px 0;
+    }
+    /* mycontact */
+    .mycontact .container .barre::after {
+        content: ' ';
+        left: 10%;
+        top: calc(48% + 1.5rem);
+        height: 8px;
+        width: 70px;
+        position: absolute;
+        transform: translateX(-50%);
+        background-color: #18ab63;
+    }
 }
 
 @media (min-width: 550px) and (max-width: 750px) {
-
+    /* Navigation */
     .logo {
         text-decoration: none;
         font-weight: bold;
         color: #000;
         text-transform: uppercase;
+        line-height: 90px;
     }
 
     .nav_links {
@@ -55,12 +126,11 @@
         align-items: start;
         justify-content: center;
         row-gap: 20px;
+        display: none;
     }
-
     .nav_links li {
         margin: 0 65px;
     }
-
     .nav_bar {
         display: flex;
         height: 100px;
@@ -68,11 +138,56 @@
         box-shadow: 24px 24px 54px #fff9f9,
             -24px -24px 64px #ffffff;
     }
-
     .nav_links li a {
         padding: 10px 0;
         border: 2px;
         font-weight: bold;
         color: #ffffff;
+    }
+    .container .btn-toogle {
+        color: #18ab63;
+        font-size: 1.5rem;
+        visibility: visible;
+        line-height: 90px;
+    }
+    /* btn-appointement */
+    .btn-appointement a {
+        text-decoration: none;
+        color:#fff;
+        background-color: #18ab63;
+        border: 1px solid #18ab63;
+        cursor: pointer;
+        visibility: hidden;
+        border-radius: 30px;
+        padding: 12px 50px;
+        transition: 0.9s ease-in-out;
+    }
+    /* my expertises */
+    .myexpertises .container .barre::after {
+        content: ' ';
+        left: 6%;
+        top: calc(48% + 1.5rem);
+        height: 8px;
+        width: 70px;
+        position: absolute;
+        transform: translateX(-50%);
+        background-color: #18ab63;
+    }
+    .myexpertises .container .card-expertises {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+        padding: 15px 0;
+    }
+    /* mycontact */
+    .mycontact .container .barre::after {
+        content: ' ';
+        left: 6%;
+        top: calc(48% + 1.5rem);
+        height: 8px;
+        width: 70px;
+        position: absolute;
+        transform: translateX(-50%);
+        background-color: #18ab63;
     }
 }
