--- a/public/assets/style/@media.css
+++ b/public/assets/style/@media.css
@@ -12,16 +12,17 @@
     nav ul {
         position: fixed;
         width: 100%;
-        height: 32vh;
-        background: #2f3640;
+        height: 35vh;
+        background: #04762c;
         top: 90px;
         left: -100%;
         text-align: center;
         display: flex;
         flex-direction: column;
-        transition: all .5s;
+        transition: 1.5s ease-in-out;
     }
     nav li {
+        top: 20px;
         display: block;
         margin: 15px 0;
         line-height: 20px;
@@ -130,7 +131,7 @@
         position: fixed;
         width: 100%;
         height: 35vh;
-        background: #2f3640;
+        background: #04762c;
         top: 90px;
         left: -100%;
         text-align: center;
